feat(analysis): 添加资金流向和同业对比功能
- 新增 selectLatestMoneyFlow 方法查询主力资金流向数据
- 添加 blueChip 字段标识大盘蓝筹股票
- 集成融资余额、龙虎榜机构净买入等事件面数据
- 增强资金面信号计算，加入主力资金流向指标
- 实现同业对比功能，提供同行业股票PE/PB/ROE对比
- 添加估值历史分位计算功能
- 实现行业涨跌排行和概念板块排行
- 新增行业关联分析，计算Beta和相关系数
- 添加涨跌停分析和大宗交易分析功能
- 优化研报覆盖热度统计
- 增强规则引擎评分参数，支持大盘蓝筹特殊逻辑